--- a/Fumigabot/app/src/main/res/layout/entrada_programadas.xml
+++ b/Fumigabot/app/src/main/res/layout/entrada_programadas.xml
@@ -155,14 +155,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/imgBorrarProgramada"
             android:layout_width="35dp"
             android:layout_height="33dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:backgroundTint="@android:color/transparent"
             android:focusable="false"
             android:focusableInTouchMode="false"
+            android:scaleType="center"
             android:tint="?attr/colorError"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
