--- a/Fumigabot/app/src/main/res/layout/entrada_quimico.xml
+++ b/Fumigabot/app/src/main/res/layout/entrada_quimico.xml
@@ -1,50 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/entradaQuimicoLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:maxHeight="49dp"
+    android:maxHeight="65dp"
     android:orientation="vertical">
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:maxHeight="49dp">
+        android:maxHeight="65dp">
 
         <TextView
             android:id="@+id/nombreQuimico"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="12dp"
-            android:text="10 de agosto de 2021"
-            android:textAlignment="viewStart"
-            android:textSize="14sp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="Amonio cuaternario"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_gravity="bottom"
-            android:background="@color/colorDivider"
+        <ImageButton
+            android:id="@+id/btnBorrarQuimico"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@android:color/transparent"
+            android:tint="?attr/colorError"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
+            app:srcCompat="@drawable/ic_delete_black_24dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
