--- a/Fumigabot/app/src/main/res/layout/fragment_programadas.xml
+++ b/Fumigabot/app/src/main/res/layout/fragment_programadas.xml
@@ -12,47 +12,91 @@
         android:layout_height="match_parent">
 
         <!-- TODO: Update blank fragment layout -->
-        <TextView
-            android:id="@+id/textSinFumigaciones"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="Todavía no se realizaron fumigaciones"
-            android:textAlignment="center"
-            android:visibility="invisible"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutListaProgramadas"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="409dp"
-            android:layout_height="wrap_content"
-            android:layout_span="4"
-            android:gravity="center_horizontal"
-            android:padding="30dp"
-            android:text="FUMIGACIONES PROGRAMADAS"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
-        <ListView
-            android:id="@+id/listaFumigacionesProgramadas"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="1dp"
-            android:divider="@null"
-            android:dividerHeight="0dp"
-            android:gravity="center"
-            android:horizontalSpacing="3dp"
-            android:verticalSpacing="3dp"
+            <TextView
+                android:id="@+id/textView5"
+                style="?attr/textAppearanceHeadline6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_span="4"
+                android:background="@drawable/recuadro_titulos"
+                android:elevation="1dp"
+                android:gravity="center_horizontal"
+                android:paddingTop="30dp"
+                android:paddingBottom="30dp"
+                android:text="Fumigaciones programadas"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ListView
+                android:id="@+id/listaFumigacionesProgramadas"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginBottom="1dp"
+                android:divider="@null"
+                android:dividerHeight="0dp"
+                android:gravity="center"
+                android:horizontalSpacing="3dp"
+                android:verticalSpacing="3dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textView5" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutSinProgramadas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintTop_toBottomOf="@+id/layoutListaProgramadas"
+            app:layout_constraintVertical_bias="0.40">
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="292dp"
+                android:layout_height="223dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_back_programadas"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/textSinFumigaciones"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:text="Aún no hay fumigaciones programadas"
+                android:textAlignment="center"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView6"
+                app:layout_constraintVertical_bias="0.0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
